# python-ansible

./: Makefile  README.md  requirements.in  requirements.txt  setup.cfg  tox.ini
ansible/: __init__.py  __main__.py
ansible/lib/: ansible.cfg  constants.py  exceptions.py
tests/: requirements.txt
