[metadata]
name = python-ansible
author = Ryan Holt
author_email = ryanwholt@hotmail.com
summary = Contains logic for interfacing with Ansible.
description_file = README.md
description_content_type = text/x-rst; charset=UTF-8
home_page = https://github.com/Reyalsorik/python-ansible
project_urls =
    Documentation = https://github.com/Reyalsorik/python-ansible/README.md
    Source Code = https://github.com/Reyalsorik/python-ansible

[pbr]
skip_authors = True
skip_changelog = True

[files]
packages = ansible

[options]
include_package_data = true
